<resources>
    <string name="app_name">eFootball Scores</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_teams">Times</string>
    <string name="menu_players">Jogadores</string>
    <string name="title_activity_login">e-football Scores - Login</string>

    <string name="prompt_game">Jogo</string>
    <string name="prompt_game_mode">Modo de Jogo</string>
    <string name="prompt_rival">Adversário</string>
    <string name="prompt_my_team">Seu Time</string>
    <string name="prompt_rival_team">Time do Adversário</string>
    <string name="prompt_password">Senha</string>
    <string name="prompt_confirm_password">Confirmar senha</string>
    <string name="prompt_email">user@email.com</string>
    <string name="prompt_username">Username</string>

    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_logout">Sair</string>
    <string name="action_add">Adicionar</string>
    <string name="action_pick_date">Selecione a Data</string>
    <string name="action_edit_user">Editar perfil</string>
    <string name="action_register">Cadastre-se</string>
    <string name="action_forgot_pass">Esqueceu a senha?</string>
    <string name="action_login">Entrar</string>
    <string name="action_is_member">Já Possui Cadastro?</string>
    <string name="action_edit_row">Editar</string>
    <string name="action_delete">Deletar</string>
    <string name="action_confirm">Confirmar</string>

    <string name="label_penalties">Pen</string>
    <string name="label_add_match">Nova Partida</string>
    <string name="label_signup">Cadastro</string>
    <string name="label_no_found_team">Nenhum time encontrado</string>
    <string name="label_no_found_match">Nenhuma partida encontrada</string>
    <string name="label_no_found_player">Nenhum jogador encontrado</string>
    <string name="label_new_password">Nova Senha</string>
    <string name="label_edit_user">Nome de Usuário</string>

    <string name="message_welcome">"Bem-vindo "</string>
    <string name="message_invalid_email">E-mail inválido!</string>
    <string name="message_invalid_password">Senha incorreta!</string>
    <string name="message_null_values">Preencha todos os campos.</string>
    <string name="message_passwords_not_matching">Senhas não combinam.</string>
    <string name="message_email_already_registered">Email já cadastrado.</string>
    <string name="message_register_success">Conta cadastrada com sucesso!</string>
    <string name="message_match_added">Partida adicionada com sucesso!</string>
    <string name="message_invalid_password_2">Senha deve ser diferente da sua antiga senha.</string>
    <string name="message_password_changed">Senha alterada com sucesso!</string>
    <string name="message_username_changed">Nome de usuário alterado!</string>
    <string name="message_warning">Escolha a data no botão ao lado.</string>
    <string name="login_failed">"Login failed"</string>

    <string name="content_description_logo">logo do app</string>
    <string name="content_description_home_team">time do usuário</string>
    <string name="content_description_away_tema">time de adversário</string>


    <string name="tip_new_match">Nova partida</string>
    
    <string-array name="teams_array">
        <item>Aalborg BK</item>
        <item>Ajax</item>
        <item>Al Ittihad</item>
        <item>Athletico</item>
        <item>Atl Madrid</item>
        <item>Bahia</item>
        <item>Barcelona</item>
        <item>Bayern Mun</item>
        <item>Bochum</item>
        <item>Bor Dortmund</item>
        <item>Chelsea</item>
        <item>Chongqing</item>
        <item>Corinthians</item>
        <item>Daegu</item>
        <item>Empoli FC</item>
        <item>Flamengo</item>
        <item>Fluminense</item>
        <item>Fortaleza</item>
        <item>Gif Sundsvall</item>
        <item>Goiás</item>
        <item>Grêmio</item>
        <item>Internacional</item>
        <item>Internazionale</item>
        <item>Jeonnam</item>
        <item>Juventus</item>
        <item>Legia Warszawa</item>
        <item>Liverpool</item>
        <item>Mainz 05</item>
        <item>Manchester Ct</item>
        <item>Manchester Ut</item>
        <item>Milan</item>
        <item>Napoli</item>
        <item>Newcastle</item>
        <item>Newport County</item>
        <item>Odds BK</item>
        <item>Palmeiras</item>
        <item>Paris FC</item>
        <item>PSG</item>
        <item>Real Madrid</item>
        <item>Sampdoria</item>
        <item>Santos</item>
        <item>São Paulo</item>
        <item>Sevilla</item>
        <item>Shakhtar Don</item>
        <item>Toronto</item>
        <item>Tottenham</item>
        <item>Udinese</item>
        <item>Unión La Calera</item>
        <item>Valenciennes</item>
        <item>Valerenga</item>
        <item>Wolfsberger AC</item>
    </string-array>
</resources>