<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="370dp"
    android:minHeight="500dp"
    android:background="@drawable/bck_efootball_2">

    <EditText
        android:id="@+id/edtNewPass"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/edt_register"
        android:drawableLeft="@drawable/ic_baseline_vpn_key"
        android:drawablePadding="10dp"
        android:elevation="5dp"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:paddingLeft="5dp"
        android:paddingTop="7dp"
        android:paddingRight="5dp"
        android:paddingBottom="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtConfirmEmail" />

    <EditText
        android:id="@+id/edtConfirmNewPass"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/edt_register"
        android:drawableLeft="@drawable/ic_baseline_vpn_key"
        android:drawablePadding="10dp"
        android:elevation="5dp"
        android:hint="@string/prompt_confirm_password"
        android:inputType="textPassword"
        android:paddingLeft="5dp"
        android:paddingTop="7dp"
        android:paddingRight="5dp"
        android:paddingBottom="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtNewPass" />


    <EditText
        android:id="@+id/edtConfirmEmail"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:background="@drawable/edt_register"
        android:drawableLeft="@drawable/ic_baseline_email"
        android:drawablePadding="10dp"
        android:elevation="5dp"
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textPersonName"
        android:paddingLeft="5dp"
        android:paddingTop="7dp"
        android:paddingRight="5dp"
        android:paddingBottom="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/btnConfirmNewPassword"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="@drawable/btn_register"
        android:text="@string/action_confirm"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/edtConfirmNewPass"
        app:layout_constraintTop_toBottomOf="@+id/edtConfirmNewPass" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/btn_cancel"
        android:drawableTop="@drawable/ic_baseline_close_24"
        android:paddingTop="10dp"
        app:layout_constraintEnd_toEndOf="@+id/edtConfirmNewPass"
        app:layout_constraintTop_toBottomOf="@+id/edtConfirmNewPass" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="120dp"
        android:fontFamily="@font/krinkes_decor"
        android:text="@string/label_new_password"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="@+id/edtConfirmEmail"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>